--- a/index.html
+++ b/index.html
@@ -3,36 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de Bianca</title>
+    <title>Sitio web con css</title>
 </head>
 <body>
-    <h1>Encabezado</h1>
-    <h2>Encabezado</h2>
-    <h3>Encabezado</h3>
-    <h3>Encabezado</h3>
-    <h5>Encabezado</h5>
-    
-
-    <p>Parrafo de prueba</p>
-    <p>Parrafo de prueba</p>
-    <p>Parrafo de prueba</p>
-    <p>Parrafo de prueba</p>
-
-    <ul>
-        <li>rojo</li>
-        <li>verde</li>
-        <li>azul</li>
-    </ul>
-
-    <h2>Lista de nombres</h2>
-    <ol>
-        <li>verde</li>
-        <li>rojo</li>
-        <li>azul</li>
-    </ol>
-    
-    <h2>Imagenes</h2>
-    <img src="https://img.freepik.com/foto-gratis/vista-robot-grafico-3d_23-2150849173.jpg" alt="robot" srcset="">
-
+    <h1>aprendiendo css por primera ves</h1>
 </body>
 </html>
